# hostfile-updater

./: Cargo.toml  README.md  do.nu
examples/: config.toml
src/: config.rs  hostfile.rs  lib.rs  main.rs
