[package]
name = "hostfile-updater"
version = "0.2.2"
edition = "2021"
authors = ["Hannes Hochreiner <hannes@hochreiner.net>"]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
clap = { version = "4.1.13", features = ["derive"] }
serde = { version = "1.0.158", features = ["derive"] }
thiserror = "1.0.40"
toml = "0.7.3"
